# FionaVolume

./: .gitignore  CMakeLists.txt  CoordFBO.h  FionaVolume.cpp  FionaVolume.h  FionaVolume.sln  FionaVolume.vcxproj  FionaVolume.vcxproj.filters  FionaVolumeReader.cpp  FionaVolumeReader.h  args.txt  main.cpp
SDK/bin64/debug/: Thumbs.db
SDK/shaders/: coordinateSpace.frag  coordinateSpace.vert  drawPosition.frag  drawPosition.vert  drawQuad.frag  drawQuad.vert  drawQuad2.vert  points.frag  points.vert  points2.frag  points2.vert  pointsprite.frag  pointsprite.vert  red.frag  samplePlane.frag  samplePlane.vert  samplePlane2.frag  simple.vert  slices.frag  slices.vert  tonemapper.frag  volume.frag  volume2.frag  volume2.vert  volumeDist.frag  volumeDist.vert  volumeRaycast - Copy.frag  volumeRaycast.frag  volumeRaycast.vert  volumeSpace.frag  volumeSpace.vert
fromSPIM/: AABB.cpp  AABB.h  BeadDetection.cpp  BeadDetection.h  Config.cpp  Config.h  Framebuffer.cpp  Framebuffer.h  GeometryImage.cpp  GeometryImage.h  InteractionVolume.cpp  InteractionVolume.h  Layout.cpp  Layout.h  OrbitCamera.cpp  OrbitCamera.h  Ray.cpp  Ray.h  SimplePointcloud.cpp  SimplePointcloud.h  SpimRegistrationApp.cpp  SpimRegistrationApp.h  SpimStack.cpp  SpimStack.h  StackRegistration.cpp  StackRegistration.h  StackTransformationSolver.cpp  StackTransformationSolver.h  Threshold.h  TinyStats.h  Volume.cpp  Volume.h  Widget.cpp  Widget.h  glmIO.h  main.cpp  nanoflann.hpp  stb_image.c  stb_image.h  stb_image_write.c  (+2 more)
x64/Release/FionaVolume.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  (+4 more)
